--- a/geffim_server/package.json
+++ b/geffim_server/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.1",
     "winston": "^3.13.0"
   },
@@ -22,6 +23,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/mysql": "^2.15.26",
     "@types/winston": "^2.4.4",
     "concurrently": "^8.2.2",
