--- a/geffim_server/package.json
+++ b/geffim_server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.1",
+    "pdfmake": "^0.2.10",
     "winston": "^3.13.0"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mysql": "^2.15.26",
+    "@types/pdfmake": "^0.2.9",
     "@types/winston": "^2.4.4",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
