--- a/gefiim_client/package.json
+++ b/gefiim_client/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.24.1",
+    "recharts": "^2.12.7",
     "sweetalert2": "^11.12.2",
     "sweetalert2-react-content": "^5.0.7"
   },
