recuperacion de contraseña

--- a/geffim_server/.env
+++ b/geffim_server/.env
@@ -5,3 +5,7 @@ DB_PASS = root
 DB_NAME = gefiim
 
 JWT_SECRET = Tl@k3p4k3
+
+
+CORREO_APP = geffim079@gmail.com
+CONTRASENA_APP = lnrs tnme zezj tdvw
